--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node db/seed.js",
     "server": "nodemon app.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "NODE_ENV=production node app.js"
   },
   "keywords": [],
   "author": "",
